--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,12 +1,22 @@
 !!! 5
 %html
   %head
-    %title Plataforma Aecci
+    %meta{'http-equiv' => 'Content-Type', :content => 'text/html; charset=utf-8'}/
+    %meta{:name => 'viewport', :content => 'width=device-width, initial-scale=1.0'}
+    %title= content_for?(:title) ? yield(:title) | 'AECCI' : 'AECCI'
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   %body
     = render 'layouts/navbar'
-    / Aca hay que darle un espacio por css para que le de campo al navbar y no quede lo demas debajo del navbar
-    %div{:style => 'padding-top: 70px'}
+    .container
+      = render 'layouts/messages'
       = yield
+      = render 'layouts/footer'
+
+
+      / Muestra información importante cuando se encuentra en modo de desarrollo
+      %br
+      %br
+      %br
+      = debug(params) if Rails.env.development?
