--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-fixed-top navbar-default">
-  <div class="container-fluid">
+  <div class="container">
     <div class="navbar-header">
       <%# Botón para vista de móvil %>
       <button aria-expanded="false" class="navbar-toggle collapsed" data-target="#opciones-navbar" data-toggle="collapse" type="button">
