--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@ad) do |f| %>
+<%= form_for(@ad, html: {multipart: true}) do |f| %>
     <% if @ad.errors.any? %>
         <div id="error_explanation">
           <h2><%= pluralize(@ad.errors.count, "error") %> prohibited this ad from being saved:</h2>
@@ -10,31 +10,55 @@
           </ul>
         </div>
     <% end %>
+
     <div class="row">
       <div class="col-md-8 col-md-offset-2">
         <div class="form-horizontal">
           <div class="form-group">
-            <%= f.label :title, 'Título de la imagen' %>
-            <%= f.text_field :title, class: 'form-control', placeholder: 'Ingrese el título del anuncio'%>
+            <div class="col-md-3">
+              <%= f.label :title, 'Título de la imagen' %>
+            </div>
+            <div class="col-md-9">
+              <%= f.text_field :title, class: 'form-control', placeholder: 'Ingrese el título del anuncio', id:'input_title' %>
+              <p class="text-danger" id="title_alert">Tiene que ingresar un título para el anuncio</p>
+            </div>
           </div>
           <div class="form-group">
-            <%= f.label :description, 'Descripción' %><br>
-            <%= f.text_area :description, class: 'form-control', placeholder: 'Ingrese la descripción del anuncio', Rows: '5', Style:'resize: none'%>
+            <div class="col-md-3">
+              <%= f.label :description, 'Descripción' %>
+            </div>
+            <div class="col-md-9">
+              <%= f.text_area :description, class: 'form-control', placeholder: 'Ingrese la descripción del anuncio', Rows: '5', Style: 'resize: none' %>
+            </div>
           </div>
           <div class="form-group">
-            <%= f.label :image_url, 'Imagen del anuncio' %><br>
-            <%= f.text_field :image_url %>
+            <div class="col-md-3">
+              <%= f.label :image_url, 'Imagen del anuncio' %>
+            </div>
+            <div class="col-md-6">
+              <span class="picture">
+                <%= f.file_field :image_url, id:'ad_image'%>
+              </span>
+            </div>
+            <div class="col-md-3">
+              <%= f.check_box :important, id:'check_important'%>
+              <%= f.label :important, 'Destacado' %>
+            </div>
           </div>
           <div class="form-group">
-            <%= f.label :important, 'Destacado' %>
-            <%= f.check_box :important %>
+            <div class="col-md-8 col-md-offset-2">
+            </div>
           </div>
           <div class="form-group">
-            <%= f.label :image_carousel_url %><br>
-            <%= f.text_field :image_carousel_url %>
+            <div class="col-md-3">
+              <%= f.label :image_carousel_url, 'Imagen del carousel' %>
+            </div>
+            <div class="col-md-9">
+              <%= f.file_field :image_carousel_url %>
+            </div>
           </div>
           <div class="actions">
-            <%= f.submit class:'btn btn-primary'%>
+            <%= f.submit class: 'btn btn-primary' %>
           </div>
         </div>
       </div>
