--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,6 +18,37 @@
           <%= link_to '¿Quiénes somos?', about_us_path %>
         </li>
       </ul>
+      <%# Menú de la derecha %>
+      <ul class="nav navbar-nav navbar-right">
+        <% if user_signed_in? %>
+            <li>TODO: Menu cuando está loguedo</li>
+        <% else %>
+            <li><a data-toggle="modal" href="javascript:void(0)" onclick="openLoginModal();">Autenticación</a></li>
+            <li><a data-toggle="modal" href="javascript:void(0)" onclick="openRegisterModal();">Registrar</a></li>
+        <% end %>
+      </ul>
     </div>
+
+
+    <%# Modal de Login %>
+    <div class="modal fade login" id="loginModal">
+      <div class="modal-dialog login animated">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          </div>
+          <div class="modal-body">
+            <div class="box">
+              <div class="content">
+                <div class="form loginBox">
+                  <h1>:-( Xq no funciona</h1>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </div>
 </nav>
