--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 <body>
   <%= render 'layouts/navbar' %>
   <div class="container">
-    <%= render 'layouts/messages' %>
+    <%= render 'layouts/flash_messages' %>
     <%= yield %>
     <%= render 'layouts/footer' %>
 
