--- a/app/views/layouts/_flash_messages.html.erb
+++ b/app/views/layouts/_flash_messages.html.erb
@@ -1,6 +1,6 @@
 <%# Muestra los mensajes flash  %>
 <% flash.each do |message_type, message| %>
-    <div class="alert <%= "alert-#{message_type}" %> alert-dismissible" role="alert">
+    <div class="alert <%= "alert-#{bootstrap_class_for(message_type)}" %> alert-dismissible" role="alert">
       <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
