Problema de Coffeescript resuelto
* Había un problema la primera vez que cargaba una pagina ya que no
corría el script que ocultaba ciertos elementos.

* Se arreglaron los sliders de la pantalla de home

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -31,9 +31,9 @@
         </div>
         <%# Para que la transicion se haga sola %>
         <%# Izquierdo %>
-        <a data-slide="prev" href="#my_carousel" role="button" />
+        <a data-slide="prev" href="#my_carousel" role="button"></a>
         <%# Derecho %>
-        <a data-slide="prev" href="#my_carousel" role="button" />
+        <a data-slide="prev" href="#my_carousel" role="button"></a>
       </div>
     </div>
   </div>
