Se agrega la visualización de imágenes

--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Ads</h1>
+<h1>Anuncios publicados en el sitio</h1>
 
 <table class="table table-striped">
   <thead>
     <tr>
       <th>Título</th>
-      <th>Destacado</th>
-      <th colspan="3"></th>
+      <th>En el carousel</th>
+      <th colspan="3"> Acciones</th>
     </tr>
   </thead>
 
