--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -43,10 +43,18 @@
                 </div>
                 <div class="col-md-8 col-lg-9">
                   <span class="picture">
-                    <%= f.file_field :image_url, id:'img_add'%>
+                    <%= f.file_field :image_url%>
+                    <%= f.hidden_field :image_url_cache %>
                   </span>
                 </div>
               </div>
+              <% if @ad.image_url?%>
+                <div class="form-group">
+                  <div class="col-md-6 col-md-offset-3">
+                    <%= image_tag @ad.image_url%>
+                  </div>
+                </div>
+              <%end%>
               <div class="form-group">
                 <div class="col-md-4 col-lg-3">
                   <%= f.label :important, 'Destacar' %>
@@ -58,9 +66,18 @@
                   <%= f.label :image_carousel_url, 'Imagen del carousel', id: 'label_img_carousel' %>
                 </div>
                 <div class="col-md-8 col-lg-9">
-                  <%= f.file_field :image_carousel_url, id: 'field_img_carousel' %>
+                  <%= f.file_field :image_carousel_url %>
+                  <%= f.hidden_field :image_carousel_url_cache %>
+                  <p class="text-info">Las dimensiones de esta imagen tiene que ser de YY x ZZ pixeles.</p>
                 </div>
               </div>
+              <% if @ad.image_carousel_url? %>
+              <div class="form-group">
+                <div class="col-md-6 col-md-offset-3">
+                  <%= image_tag(@ad.image_carousel_url) %>
+                </div>
+              </div>
+              <%end%>
             </div>
           </div>
         </div>
