Se hace un cambio en la vista de los anuncios

--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -1,29 +1,83 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Anuncios publicados en el sitio</h1>
+<!-- Esta deberia de ser la vista para los miembros de la asocia -->
+<h1>Anuncios publicados en el sitio
+  <small class="text-warning">(vista solo para admis)</small>
+</h1>
 
 <table class="table table-striped">
   <thead>
-    <tr>
-      <th>Título</th>
-      <th>En el carousel</th>
-      <th colspan="3"> Acciones</th>
-    </tr>
+  <tr>
+    <th>Título</th>
+    <th>En el carousel</th>
+    <th colspan="3"> Acciones</th>
+  </tr>
   </thead>
 
   <tbody>
-    <% @ads.each do |ad| %>
+  <% @ads.each do |ad| %>
       <tr>
         <td><%= ad.title %></td>
-        <td><%= ad.important? ? 'Si' : 'No'%></td>
+        <td><%= ad.important? ? 'Si' : 'No' %></td>
         <td><%= link_to 'Show', ad %></td>
         <td><%= link_to 'Edit', edit_ad_path(ad) %></td>
-        <td><%= link_to 'Destroy', ad, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', ad, method: :delete, data: {confirm: 'Are you sure?'} %></td>
       </tr>
-    <% end %>
+  <% end %>
   </tbody>
 </table>
 
 <br>
 
-<%= link_to 'Agregar un anuncio', new_ad_path, class:'btn btn-primary' %>
+<%= link_to 'Agregar un anuncio', new_ad_path, class: 'btn btn-primary' %>
+<hr/>
+<!-- Los otros usuarios deben de tener otra vista-->
+<div class="row">
+  <div class="col-md-10 col-md-offset-1">
+    <h1>Anuncios de interes
+      <small class="text-warning">(vista para estudiantes)</small>
+    </h1>
+  </div>
+</div>
+<% @ads.each do |ad| %>
+    <!--
+    <div class="row">
+      <div class="col-md-10 col-md-offset-1">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title"><%= ad.title %></h3>
+          </div>
+          <div class="panel-body">
+            <div class="row">
+              <div class="col-md-4">
+                <%= ad.description %>
+              </div>
+              <div class="col-md-8">
+                <%= image_tag ad.image_url, class: 'img-responsive' %>
+              </div>
+            </div>
+          </div>
+        </div>
+        <hr/>
+      </div>
+    </div>
+    -->
+    <div class="row">
+      <div class="col-md-offset-1 col-md-10">
+        <div class="row">
+          <div class="col-md-12">
+            <h3> <%= ad.title %></h3>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <%= ad.description %>
+          </div>
+          <div class="col-md-8">
+            <%= image_tag ad.image_url, class: 'img-responsive' %>
+          </div>
+        </div>
+        <hr/>
+      </div>
+    </div>
+<% end %>
