--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -41,5 +41,7 @@
 <div class="row">
   <div class="col-md-8 col-md-offset-2">
     <h2>Acá luego se pone informacion propia de la escuela</h2>
+    <hr/>
+    <%= image_tag @ads.image_url %>
   </div>
 </div>
