--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -2,3 +2,21 @@
 body {
   padding-top: 60px;
 }
+
+.form-control{
+  border-radius: 3px !important;
+  background-color: rgba(0, 0, 0, 0.05) !important;
+  box-shadow: 0 1px 0px 0px rgba(0, 0, 0, 0.09) inset !important;
+  color: #FFFFFF !important;
+}
+
+.form-control:hover{
+  background-color: rgba(0,0,0,.16) !important;
+}
+
+.form-control:focus{
+  box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.04) inset !important;
+  background-color: rgba(0,0,0,0.23) !important;
+  color: #FFFFFF !important;
+  border-color: transparent !important;
+}
