--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,16 +1,13 @@
 // Espacio para el navbar
 body {
   padding-top: 60px;
-<<<<<<< HEAD
-  background-color: #fafafa;
-=======
 }
 
 .form-control{
   border-radius: 3px !important;
   background-color: rgba(0, 0, 0, 0.05) !important;
   box-shadow: 0 1px 0px 0px rgba(0, 0, 0, 0.09) inset !important;
-  color: #FFFFFF !important;
+  color: #212121 !important;
 }
 
 .form-control:hover{
@@ -20,7 +17,6 @@ body {
 .form-control:focus{
   box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.04) inset !important;
   background-color: rgba(0,0,0,0.23) !important;
-  color: #FFFFFF !important;
+  color: #212121 !important;
   border-color: transparent !important;
->>>>>>> master
 }
