--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,27 +8,40 @@
 <div class="row">
   <div class="col-md-8 col-md-offset-2">
     <div id="my_carousel" class="carousel slide" data-ride="carousel">
+
       <%# Indicadores %>
       <ol class="carousel-indicators">
-        <li class="active" data-slide-to="0" data-target="#my_carousel"></li>
-        <li data-slide-to="1" data-target="#my_carousel"></li>
+        <% count = 0 %>
+        <% @ads.each do |ad| %>
+            <% if count == 0 %>
+                <li class="active" data-slide-to= <%=count%> data-target="#my_carousel"></li>
+            <% else %>
+                <li data-slide-to= <%=count%> data-target="#my_carousel"></li>
+            <% end %>
+            <% count = count + 1 %>
+        <% end %>
       </ol>
       <%# Wrappers para los slides %>
       <div class="carousel-inner" role="listbox">
-        <div class="item active">
-          <img src="https://scontent-mia1-1.xx.fbcdn.net/hphotos-xpt1/v/t1.0-9/12644744_10207637957761072_1135077213064854338_n.jpg?oh=4293f4fea899bb1bde2438b306b5faaa&oe=576AC3D6"/>
-          <div class="carousel-caption">
-            <h3>Glacier Point</h3>
-            <p>Esta foto es del parque nacional Yosemite en California</p>
-          </div>
-        </div>
-        <div class="item">
-          <img src="https://scontent-mia1-1.xx.fbcdn.net/hphotos-xpa1/v/t1.0-9/10891734_10205302028444299_778399481311039019_n.jpg?oh=bd02cc15fcdefe6647c5bc5101bd50d4&oe=572784D0"/>
-          <div class="carousel-caption">
-            <h3>Angel Fire</h3>
-            <p>Esta foto es en Angel Fire en Nuevo México</p>
-          </div>
-        </div>
+        <% count = 0 %>
+        <% @ads.each do |ad| %>
+            <% if count == 0 %>
+                <div class="item active">
+                  <%= image_tag ad.image_carousel_url %>
+                  <div class="carousel-caption">
+                    <h3> <%= ad.title %></h3>
+                  </div>
+                </div>
+            <% else %>
+                <div class="item">
+                  <%= image_tag ad.image_carousel_url %>
+                  <div class="carousel-caption">
+                    <h3><%= ad.title %></h3>
+                  </div>
+                </div>
+            <% end %>
+            <% count = count + 1 %>
+        <% end %>
         <%# Para que la transicion se haga sola %>
         <%# Izquierdo %>
         <a data-slide="prev" href="#my_carousel" role="button"></a>
@@ -42,6 +55,5 @@
   <div class="col-md-8 col-md-offset-2">
     <h2>Acá luego se pone informacion propia de la escuela</h2>
     <hr/>
-    <%= image_tag @ads.image_url %>
   </div>
 </div>
