--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,6 +18,9 @@
         <li>
           <%= link_to '¿Quiénes somos?', about_us_path %>
         </li>
+        <li>
+          <%= link_to 'Anuncios', ads_path %>
+        </li>
         <% if user_signed_in? %>
             <li>TODO: Menu cuando está loguedo</li>
         <% else %>
