Se añaden los enlaces de interés en el footer

--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -5572,7 +5572,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 
 .navbar-default .navbar-collapse,
 .navbar-default .navbar-form {
-    border-color: #2b2b2b;
+    border-color: #f2762e;
 }
 
 .navbar-default .navbar-nav > .open > a,
