--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,1 +1,30 @@
 <%# Aquí va el footer del sitio web %>
+<div class="body-footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <h5 class="title-footer">Enlaces de interes</h5>
+        <ul>
+          <li><a href="http://www.ucr.ac.cr" class="text-footer" target="_blank">Universidad de Costa Rica </a></li>
+          <li><a href="http://www.ecci.ucr.ac.cr" class="text-footer" target="_blank">Escuela de Ciencias de la Computación e Informática</a></li>
+          <li><a href="https://webmail.ecci.ucr.ac.cr/webmail/src/login.php" class="text-footer" target="_blank">Correo de la ECCI</a></li>
+          <li><a href="https://plataforma.ecci.ucr.ac.cr/moodle/" class="text-footer" target="_blank">Plataforma educativa</a></li>
+          <li><a href="http://www.ori.ucr.ac.cr" class="text-footer" target="_blank">Oficina de Registro</a></li>
+          <li><a href="https://ematricula.ucr.ac.cr/ematricula/" class="text-footer" target="_blank">eMatricula</a></li>
+        </ul>
+      </div>
+      <div class="col-md-4">
+        <h5 class="title-footer">Mapa del sitio</h5>
+      </div>
+      <div class="col-md-4">
+        <h5 class="title-footer">Contáctenos</h5>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <hr/>
+        <p class="text-center text-footer">Todos los derechos reservados - <%= Time.now.year %></p>
+      </div>
+    </div>
+  </div>
+</div>
