--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -20,3 +20,21 @@ body {
   color: #212121 !important;
   border-color: transparent !important;
 }
+
+.body-footer{
+  background-color: #2b2b2b;
+  padding: 40px;
+}
+.text-footer{
+  color: #9d9d9d;
+}
+
+.title-footer{
+  color: #E0E0E0;
+}
+a:hover,
+a:focus{
+  background-color: transparent;
+  color: #FF9800;
+  text-decoration: none;
+}
