--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -53,7 +53,15 @@
 </div>
 <div class="row">
   <div class="col-md-8 col-md-offset-2">
-    <h2>Acá luego se pone informacion propia de la escuela</h2>
+    <h2>Historia de la escuela</h2>
+    <p>La Escuela de Ciencias de la Computación e Infomática de la Universidad de Costa Rica se fundó en 1981, como
+      resultado de la fusión de dos programas distintos pero relacionados, el de Bachillerato en Informática y el de
+      Bachillerato y Licenciatura en Computación. También se creó un nuevo programa de Bachillerato en Computación e
+      Informática, con el cual se introdujeron innovaciones tecnológicas en la educación superior de la disciplina.
+      La Escuela fue creada en un momento de gran cambio en las ciencias de la computación, puesto que la
+      microcomputadora había salido al mercado recientemente y estaba revolucionando el campo. Las organizaciones
+      empezaban a necesitar profesionales capaces de ayudarles a automatizar sus actividades. La Escuela les proveyó
+      tanto de profesionales de alta calidad que formaba como de asesorías y otras actividades de extensión social.</p>
     <hr/>
   </div>
 </div>
