--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -1,30 +1,35 @@
 <p id="notice"><%= notice %></p>
+<div class="row">
+  <div class="col-md-10 col-md-offset-1">
+    <div class="btn-group" role="group">
+      <%= link_to 'Editar', edit_ad_path(@ad), class:'btn btn-primary' %>
+      <%= link_to 'Volver', ads_path, class:'btn btn-primary' %>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-10 col-md-offset-1">
+    <h2><%= @ad.title %></h2>
+    <hr/>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-5 col-md-offset-1">
+    <%= @ad.description %>
+  </div>
+  <div class="col-md-5">
+    <%= image_tag @ad.image_url, class: 'img-responsive' %>
+  </div>
+</div>
 
 <p>
-  <strong>Título:</strong>
-  <%= @ad.title %>
+  <strong>Imagen del carousel:</strong>
+  <%= image_tag @ad.image_carousel_url, class: 'img-responsive' %>
 </p>
 
 <p>
-  <strong>Descripción:</strong>
-  <%= @ad.description %>
+  <strong>Se encuentra en el carousel:</strong>
+  <%= @ad.important? ? 'Si' : 'No' %>
 </p>
 
-<p>
-  <strong>Image url:</strong>
-  <%= @ad.image_url %>
-  <%= image_tag(@ad.image_url) %>
-</p>
 
-<p>
-  <strong>Image carousel url:</strong>
-  <%= @ad.image_carousel_url %>
-</p>
-
-<p>
-  <strong>Important:</strong>
-  <%= @ad.important %>
-</p>
-
-<%= link_to 'Edit', edit_ad_path(@ad) %> |
-<%= link_to 'Back', ads_path %>
