--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -19,79 +19,21 @@
           <%= link_to '¿Quiénes somos?', about_us_path %>
         </li>
         <% if user_signed_in? %>
-            <li>TODO: Menu cuando está loguedo</li>
+            <div class="dropdown">
+              <button class="btn dropdown-toggle" type="button" id="dropdown-opciones" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                Opciones <span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu" aria-labelledby="dropdown-opciones">
+                <li><%= link_to 'Editar perfil', edit_user_registration_path %></li>
+                <li role="separator" class="divider"></li>
+                <li><%= link_to 'Cerrar sesión', destroy_user_session_path %></li>
+              </ul>
+            </div>
         <% else %>
-            <li><a data-toggle="modal" href="javascript:void(0)" onclick="openLoginModal();">Autenticación</a></li>
-            <li><a data-toggle="modal" href="javascript:void(0)" onclick="openRegisterModal();">Registrar</a></li>
+            <li><%= button_to 'Iniciar Sesión', new_user_session_path, method: :get, class: 'btn navbar-btn btn-login' %></li>
+            <li><%= button_to 'Registrarse', new_user_registration_path, method: :get, class: 'btn navbar-btn btn-registro' %></li>
         <% end %>
       </ul>
     </div>
-
-
-    <%# Modal de Login %>
-    <div class="modal fade login" id="loginModal">
-      <div class="modal-dialog login animated">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-            <h4 class="modal-title">Login with</h4>
-          </div>
-          <div class="modal-body">
-            <div class="box">
-              <div class="content">
-                <div class="social">
-                  <a class="circle github" href="/auth/github">
-                    <i class="fa fa-github fa-fw"></i>
-                  </a>
-                  <a id="google_login" class="circle google" href="/auth/google_oauth2">
-                    <i class="fa fa-google-plus fa-fw"></i>
-                  </a>
-                  <a id="facebook_login" class="circle facebook" href="/auth/facebook">
-                    <i class="fa fa-facebook fa-fw"></i>
-                  </a>
-                </div>
-                <div class="division">
-                  <div class="line l"></div>
-                  <span>or</span>
-                  <div class="line r"></div>
-                </div>
-                <div class="error"></div>
-                <div class="form loginBox">
-                  <form method="post" action="/login" accept-charset="UTF-8">
-                    <input id="email" class="form-control" type="text" placeholder="Email" name="email">
-                    <input id="password" class="form-control" type="password" placeholder="Password" name="password">
-                    <input class="btn btn-default btn-login" type="button" value="Login" onclick="loginAjax()">
-                  </form>
-                </div>
-              </div>
-            </div>
-            <div class="box">
-              <div class="content registerBox" style="display:none;">
-                <div class="form">
-                  <form method="post" html="{:multipart=>true}" data-remote="true" action="/register" accept-charset="UTF-8">
-                    <input id="email" class="form-control" type="text" placeholder="Email" name="email">
-                    <input id="password" class="form-control" type="password" placeholder="Password" name="password">
-                    <input id="password_confirmation" class="form-control" type="password" placeholder="Repeat Password" name="password_confirmation">
-                    <input class="btn btn-default btn-register" type="submit" value="Create account" name="commit">
-                  </form>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="modal-footer">
-            <div class="forgot login-footer">
-                            <span>Looking to
-                                 <a href="javascript: showRegisterForm();">create an account</a>
-                            ?</span>
-            </div>
-            <div class="forgot register-footer" style="display:none">
-              <span>Already have an account?</span>
-              <a href="javascript: showLoginForm();">Login</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
   </div>
 </nav>
