Se termina de darle estilo al modulo de anuncios
* Todavía falta que el carousel quede bien

--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -2,8 +2,8 @@
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
     <div class="btn-group" role="group">
-      <%= link_to 'Editar', edit_ad_path(@ad), class:'btn btn-primary' %>
-      <%= link_to 'Volver', ads_path, class:'btn btn-primary' %>
+      <%= link_to 'Editar', edit_ad_path(@ad), class: 'text-footer' %> |
+      <%= link_to 'Regresar', ads_path, class: 'text-footer' %>
     </div>
   </div>
 </div>
@@ -17,19 +17,23 @@
   <div class="col-md-5 col-md-offset-1">
     <%= @ad.description %>
   </div>
-  <div class="col-md-5">
+  <div class="col-md-5 col-lg-4">
     <%= image_tag @ad.image_url, class: 'img-responsive' %>
   </div>
 </div>
-
-<p>
-  <strong>Imagen del carousel:</strong>
-  <%= image_tag @ad.image_carousel_url, class: 'img-responsive' %>
-</p>
-
-<p>
-  <strong>Se encuentra en el carousel:</strong>
-  <%= @ad.important? ? 'Si' : 'No' %>
-</p>
+<% if @ad.important? %>
+    <br/>
+    <div class="row">
+      <div class="col-md-10 col-md-offset-1">
+        <h4>Imagen que se muestra en el carousel</h4>
+      </div>
+    </div>
+    <br/>
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <%= image_tag @ad.image_carousel_url, class: 'img-responsive' %>
+      </div>
+    </div>
+<% end %>
 
 
