--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-8 col-md-offset-2">
-    <h3>Anuncios varios</h3>
+    <h3>Anuncios importantes</h3>
   </div>
 </div>
 
