--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -43,22 +43,22 @@
                 </div>
                 <div class="col-md-8 col-lg-9">
                   <span class="picture">
-                    <%= f.file_field :image_url%>
+                    <%= f.file_field :image_url %>
                     <%= f.hidden_field :image_url_cache %>
                   </span>
                 </div>
               </div>
-              <% if @ad.image_url?%>
-                <div class="form-group">
-                  <div class="col-md-6 col-md-offset-3">
-                    <%= image_tag @ad.image_url, class:'img-responsive'%>
+              <% if @ad.image_url? %>
+                  <div class="form-group">
+                    <div class="col-md-6 col-md-offset-3">
+                      <%= image_tag @ad.image_url, class: 'img-responsive' %>
+                    </div>
                   </div>
-                </div>
-              <%end%>
+              <% end %>
               <div class="form-group">
                 <div class="col-md-4 col-lg-3">
                   <%= f.label :important, 'Destacar' %>
-                  <%= f.check_box :important, id: 'check_important'%>
+                  <%= f.check_box :important, id: 'check_important' %>
                 </div>
               </div>
               <div class="form-group" id="carousel_part">
@@ -68,26 +68,21 @@
                 <div class="col-md-8 col-lg-9">
                   <%= f.file_field :image_carousel_url %>
                   <%= f.hidden_field :image_carousel_url_cache %>
-                  <p class="text-info">Las dimensiones de esta imagen tiene que ser de YY x ZZ pixeles.</p>
+                  <p class="text-info">Las dimensiones de esta imagen tiene que ser de YY x ZZ pixeles como mínimo.</p>
                 </div>
               </div>
               <% if @ad.image_carousel_url? %>
-              <div class="form-group">
-                <div class="col-md-6 col-md-offset-3">
-                  <%= image_tag @ad.image_carousel_url, class:'img-responsive' %>
-                </div>
-              </div>
-              <%end%>
+                  <div class="form-group">
+                    <div class="col-md-6 col-md-offset-3">
+                      <%= image_tag @ad.image_carousel_url, class: 'img-responsive' %>
+                    </div>
+                  </div>
+              <% end %>
             </div>
           </div>
-        </div>
-      </div>
-
-    </div>
-    <div class="row">
-      <div class="col-md-12">
-        <div class="actions">
-          <%= f.submit class: 'btn btn-primary' %>
+          <div class="panel-footer">
+            <%= f.submit class: 'btn btn-primary btn-block' %>
+          </div>
         </div>
       </div>
     </div>
