--- a/app/views/ads/edit.html.erb
+++ b/app/views/ads/edit.html.erb
@@ -1,6 +1,16 @@
-<h1>Editing Ad</h1>
+<div class="row">
+  <div class="col-md-10 col-md-offset-1">
+    <div class="btn-group">
+      <%= link_to 'Mostrar', @ad, class:'text-footer' %> |
+      <%= link_to 'Regresar', ads_path, class:'text-footer' %>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-10 col-md-offset-1">
+    <h1>Edición del anuncio</h1>
+    <hr/>
+  </div>
+</div>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @ad %> |
-<%= link_to 'Back', ads_path %>
