--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -72,7 +72,7 @@
 <!-- Los otros usuarios deben de tener otra vista-->
 <% @ads.each do |ad| %>
     <div class="row">
-      <div class="col-md-offset-1 col-md-10">
+      <div class="col-md-offset-1 col-md-10 col-lg-8 col-lg-offset-2">
         <div class="row">
           <div class="col-md-12">
             <h3> <%= ad.title %></h3>
