--- a/app/views/ads/new.html.erb
+++ b/app/views/ads/new.html.erb
@@ -1,5 +1,12 @@
-<h1>New Ad</h1>
-
+<div class="row">
+  <div class="col-md-1 col-md-offset-1">
+    <%= link_to 'Regresar', ads_path, class:'text-footer' %>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-10 col-md-offset-1">
+    <h1>Crear un anuncio</h1>
+    <hr/>
+  </div>
+</div>
 <%= render 'form' %>
-
-<%= link_to 'Back', ads_path %>
