Se agregan elementos al footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,9 +6,13 @@
         <h5 class="title-footer">Enlaces de interes</h5>
         <ul>
           <li><a href="http://www.ucr.ac.cr" class="text-footer" target="_blank">Universidad de Costa Rica </a></li>
-          <li><a href="http://www.ecci.ucr.ac.cr" class="text-footer" target="_blank">Escuela de Ciencias de la Computación e Informática</a></li>
-          <li><a href="https://webmail.ecci.ucr.ac.cr/webmail/src/login.php" class="text-footer" target="_blank">Correo de la ECCI</a></li>
-          <li><a href="https://plataforma.ecci.ucr.ac.cr/moodle/" class="text-footer" target="_blank">Plataforma educativa</a></li>
+          <li><a href="http://www.ecci.ucr.ac.cr" class="text-footer" target="_blank">Escuela de Ciencias de la
+            Computación e Informática</a></li>
+          <li>
+            <a href="https://webmail.ecci.ucr.ac.cr/webmail/src/login.php" class="text-footer" target="_blank">Correo de
+              la ECCI</a></li>
+          <li><a href="https://plataforma.ecci.ucr.ac.cr/moodle/" class="text-footer" target="_blank">Plataforma
+            educativa</a></li>
           <li><a href="http://www.ori.ucr.ac.cr" class="text-footer" target="_blank">Oficina de Registro</a></li>
           <li><a href="https://ematricula.ucr.ac.cr/ematricula/" class="text-footer" target="_blank">eMatricula</a></li>
         </ul>
@@ -18,6 +22,15 @@
       </div>
       <div class="col-md-4">
         <h5 class="title-footer">Contáctenos</h5>
+        <ul>
+          <li>
+            <a href="https://www.facebook.com/aecci.ucr/" class="text-footer" target="_blank"><i class="fa fa-facebook highligh-footer"></i>
+              Hazte fan</a></li>
+          <li><i class="fa fa-phone highligh-footer"></i><span class="text-footer">  (+506) 2511 8027</span></li>
+          <li>
+            <a href="https://goo.gl/maps/qce48V5g1F52" class="text-footer" target="_blank"><i class="fa fa-map-marker highligh-footer"></i>
+              San Pedro, San José, Costa Rica</a></li>
+        </ul>
       </div>
     </div>
     <div class="row">
