Se agregan mas estilos al footer

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -48,5 +48,9 @@ a:hover,
 a:focus{
   background-color: transparent;
   color: #FF9800;
-  text-decoration: none;
+  text-decoration: underline;
+}
+
+a{
+  color: #FF9800;
 }
