--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -19,6 +19,10 @@
       </div>
       <div class="col-md-4">
         <h5 class="title-footer">Mapa del sitio</h5>
+        <ul>
+          <li><a href=<%= about_us_path %> class="text-footer">¿Quienes somos?</a></li>
+          <li><a href=<%= ads_path %> class="text-footer">Anuncios</a></li>
+        </ul>
       </div>
       <div class="col-md-4">
         <h5 class="title-footer">Contáctenos</h5>
@@ -35,8 +39,18 @@
     </div>
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <hr/>
-        <p class="text-center text-footer">Todos los derechos reservados - <%= Time.now.year %></p>
+        <small>
+          <hr/>
+          <p class="text-center text-footer">Asociación de Estudiantes de la Escuela de Ciencias de la Computación e Informatica - <%= Time.now.year %></p></small>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-1 col-md-offset-11">
+        <div class="center-block">
+          <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
+            <img alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/80x15.png"/>
+          </a>
+        </div>
       </div>
     </div>
   </div>
