--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -14,10 +14,10 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-md-5 col-md-offset-1">
+  <div class="col-md-7 col-md-offset-1">
     <%= @ad.description %>
   </div>
-  <div class="col-md-5 col-lg-4">
+  <div class="col-md-3">
     <%= image_tag @ad.image_url, class: 'img-responsive' %>
   </div>
 </div>
