--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -56,28 +56,33 @@
                   </div>
               <% end %>
               <div class="form-group">
-                <div class="col-md-4 col-lg-3">
-                  <%= f.label :important, 'Destacar' %>
-                  <%= f.check_box :important, id: 'check_important' %>
+                <div class="col-md-4 col-lg-3 col-xs-6">
+                  <%= f.label :important, 'Incluir en el carousel' %>
+                </div>
+                <div class="col-md-1 col-md-1 col-xs-1">
+                  <%= f.check_box :important, id: 'check_important'%>
                 </div>
               </div>
-              <div class="form-group" id="carousel_part">
-                <div class="col-md-4 col-lg-3">
-                  <%= f.label :image_carousel_url, 'Imagen del carousel', id: 'label_img_carousel' %>
-                </div>
-                <div class="col-md-8 col-lg-9">
-                  <%= f.file_field :image_carousel_url %>
-                  <%= f.hidden_field :image_carousel_url_cache %>
-                  <p class="text-info">Las dimensiones de esta imagen tiene que ser de YY x ZZ pixeles como mínimo.</p>
-                </div>
-              </div>
-              <% if @ad.image_carousel_url? %>
-                  <div class="form-group">
-                    <div class="col-md-6 col-md-offset-3">
-                      <%= image_tag @ad.image_carousel_url, class: 'img-responsive' %>
-                    </div>
+              <div id="carousel_part">
+                <div class="form-group">
+                  <div class="col-md-4 col-lg-3">
+                    <%= f.label :image_carousel_url, 'Imagen del carousel', id: 'label_img_carousel' %>
                   </div>
-              <% end %>
+                  <div class="col-md-8 col-lg-9">
+                    <%= f.file_field :image_carousel_url %>
+                    <%= f.hidden_field :image_carousel_url_cache %>
+                    <p class="text-info">Las dimensiones de esta imagen tiene que ser de YY x ZZ pixeles como
+                      mínimo.</p>
+                  </div>
+                </div>
+                <% if @ad.image_carousel_url? %>
+                    <div class="form-group">
+                      <div class="col-md-6 col-md-offset-3">
+                        <%= image_tag @ad.image_carousel_url, class: 'img-responsive' %>
+                      </div>
+                    </div>
+                <% end %>
+              </div>
             </div>
           </div>
           <div class="panel-footer">
