--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-4">
-        <h5 class="title-footer">Enlaces de interes</h5>
+        <h5 class="title-footer">Enlaces de interés</h5>
         <ul>
           <li><a href="http://www.ucr.ac.cr" class="text-footer" target="_blank">Universidad de Costa Rica </a></li>
           <li><a href="http://www.ecci.ucr.ac.cr" class="text-footer" target="_blank">Escuela de Ciencias de la
@@ -20,8 +20,10 @@
       <div class="col-md-4">
         <h5 class="title-footer">Mapa del sitio</h5>
         <ul>
-          <li><a href=<%= about_us_path %> class="text-footer">¿Quienes somos?</a></li>
+          <li><a href=<%= about_us_path %> class="text-footer">¿Quiénes somos?</a></li>
           <li><a href=<%= ads_path %> class="text-footer">Anuncios</a></li>
+          <li><a href="" class="text-footer" >Iniciar sesión</a></li>
+          <li><a href="" class="text-footer">Registrarse</a></li>
         </ul>
       </div>
       <div class="col-md-4">
